# emoji-wizard

./: .gitattributes  .gitignore  .pylintrc  LICENSE  LICENSE.md  README.md  bot_tools.py  caching.py  config.json  config.toml  database_tools.py  main.py  pyproject.toml  requirements.txt  test.py  tox.ini
.github/workflows/: codacy.yml  codeql-analysis.yml  devskim.yml  pylint.yml  semgrep.yml
bot/: __main__.py  bot.py  core.py  options.py  typeshack.py
bot/cogs/: meta.py
bot/tools/: __init__.py  misc_tools.py
bot/tools/misc/: __init__.py
bot/utils/: benchmark.py
bot/utils/alitecachepg/: __main__.py
bot/utils/caching/: __init__.py  base.py  cache.py  prefix.py  prefix_util.py  typeshack.py
cogs/: add.py  enlarge.py  help.py  invite.py  list.py  meta.py  preferences.py  remove.py  remove_all.py  rename.py  source.py
cogs/emoji/: add.py  enlarge.py  list.py  remove.py  remove_all.py  rename.py
cogs/meta/: invite.py  meta.py  source.py
helpers/: context_patch.py
tools/: __init__.py  bot_tools.py  caching.py  caching_table_tools.py  database.py  database_tools.py  enchanced_checks.py  enum_tools.py  enums.py  interim.py
tools/litecache/: __init__.py  litecache.py  queries.py
tools/litecache/query_store/: cloner.sql  name_collector.sql
tools/misc/: __init__.py  misc_tools.py
utilities/: handlers.py  preference.py
utils/: __init__.py
utils/caching/: __init__.py  cache.py  caching_pods.py  events.py  hints.py  prefix_util.py  typeshack.py
utils/caching/mixins/: __init__.py  events.py  (+1 more)
utils/helpers/: __init__.py  prefix_helper.py
(+10 files in other folders)
